--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     
+    <div class="container">
+        <button>Show notification</button>
+        
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
