--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     
-    <div class="container">
-        <button>Show notification</button>
-        
+    <div class="buttons">
+        <button>Success</button>
+        <button>Error</button>
+        <button>Invalid</button>
+
     </div>
 
     <script src="script.js"></script>
