--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toast notification</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/435c8ed82d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
     <div class="buttons">
-        <button>Success</button>
-        <button>Error</button>
-        <button>Invalid</button>
-
+        <button onclick="showToast(successMsg)">Success</button>
+        <button onclick="showToast(errorMsg)">Error</button>
+        <button onclick="showToast(invalidMsg)">Invalid</button>
     </div>
+
+    <div id="toastBox"></div>
 
     <script src="script.js"></script>
 </body>
