--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <div class="buttons">
+        <h1>Click on the buttons for different types of notifications</h1>
         <button onclick="showToast(successMsg)">Success</button>
         <button onclick="showToast(errorMsg)">Error</button>
         <button onclick="showToast(invalidMsg)">Invalid</button>
