buttons color changed

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     
     <div class="buttons">
         <h1>Click on the buttons for different types of notifications</h1>
-        <button onclick="showToast(successMsg)">Success</button>
-        <button onclick="showToast(errorMsg)">Error</button>
-        <button onclick="showToast(invalidMsg)">Invalid</button>
+        <button onclick="showToast(successMsg)" style="background-color: rgb(22, 105, 22);">Success</button>
+        <button onclick="showToast(errorMsg)" style="background-color: rgb(133, 24, 24);">Error</button>
+        <button onclick="showToast(invalidMsg)" style="background-color: rgb(160, 111, 21);">Invalid</button>
     </div>
 
     <div id="toastBox"></div>
